# weft

./: .cache_ggshield  .dockerignore  .env.example  .env.extension.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SETUP.md  build-extension.sh  cleanup.sh  dev.sh  init-db.sh  init-db.sql
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/agents/: code-reviewer.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  node_request.yml
catalog/code/:exec/python/: backend.rs  frontend.ts
catalog/communication/:discord/ban/: backend.rs  frontend.ts
catalog/communication/:discord/config/: backend.rs  frontend.ts
catalog/communication/:discord/delete-message/: backend.rs  frontend.ts
catalog/communication/:discord/indicator/: backend.rs  frontend.ts
catalog/communication/:discord/kick/: backend.rs  frontend.ts
catalog/communication/:discord/pin-message/: backend.rs  frontend.ts
catalog/communication/:discord/react/: backend.rs  frontend.ts
catalog/communication/:discord/receive/: backend.rs  frontend.ts
catalog/communication/:discord/send/: backend.rs  frontend.ts
catalog/communication/:discord/timeout/: backend.rs  frontend.ts
catalog/communication/:discord/unban/: backend.rs  frontend.ts
catalog/communication/:email/: lib.rs
catalog/communication/:email/config/: backend.rs  frontend.ts
catalog/communication/:email/receive/: backend.rs  frontend.ts
catalog/communication/:email/send/: backend.rs  frontend.ts
catalog/communication/:email/thread/: backend.rs  frontend.ts
catalog/communication/:email/url/: backend.rs  frontend.ts
catalog/communication/:slack/config/: backend.rs  frontend.ts
catalog/communication/:slack/delete-message/: backend.rs  frontend.ts
catalog/communication/:slack/kick/: backend.rs  frontend.ts
catalog/communication/:slack/pin-message/: backend.rs  frontend.ts
catalog/communication/:slack/react/: backend.rs  frontend.ts
catalog/communication/:slack/receive/: backend.rs  frontend.ts
catalog/communication/:slack/send/: backend.rs  frontend.ts
catalog/communication/:slack/set-topic/: backend.rs  frontend.ts
catalog/communication/:sms/url/: backend.rs  frontend.ts
catalog/communication/:telegram/ban/: backend.rs  frontend.ts
catalog/communication/:telegram/config/: backend.rs  frontend.ts
catalog/communication/:telegram/delete-message/: backend.rs  frontend.ts
catalog/communication/:telegram/forward-message/: backend.rs  frontend.ts
catalog/communication/:telegram/indicator/: backend.rs  frontend.ts
catalog/communication/:telegram/promote/: backend.rs  (+1 more)
catalog/debug/debug/: backend.rs  frontend.ts
catalog/enrichment/http/: backend.rs  frontend.ts
catalog/flow/gate/: backend.rs  frontend.ts
catalog/flow/notify/: backend.rs  frontend.ts
catalog/layout/annotation/: frontend.ts
catalog/layout/group/: frontend.ts
catalog/storage/:postgres/database/sidecar/: Cargo.toml  Dockerfile
catalog/storage/:postgres/database/sidecar/src/: main.rs
catalog/transform/pack/: backend.rs  frontend.ts
catalog/transform/template/: backend.rs  frontend.ts
catalog/transform/unpack/: backend.rs  frontend.ts
catalog/triggers/cron/: backend.rs  frontend.ts
catalog/triggers/rss/: backend.rs  frontend.ts
crates/weft-api/: Cargo.toml
crates/weft-api/src/: crypto.rs  extension_api.rs  extension_tokens.rs  log_utils.rs  main.rs  publish.rs  routes.rs  state.rs  trigger_store.rs  usage_store.rs  webhooks.rs
crates/weft-core/: Cargo.toml
crates/weft-core/bindings/: ActionEndpoint.ts  Edge.ts  ExecutionStatus.ts  GroupBoundary.ts  GroupBoundaryRole.ts  InfrastructureSpec.ts  KubeManifest.ts  LaneMode.ts  MessagePayload.ts  NodeDefinition.ts  NodeFeatures.ts  NodeType.ts  PortDefinition.ts  PortType.ts  Position.ts  Primitive.ts  PrimitivePortType.ts  ProjectDefinition.ts  ProjectExecution.ts  ProjectStatus.ts  TriggerCategory.ts  WeftPrimitive.ts  WeftType.ts
crates/weft-core/src/: executor.rs  executor_core.rs  infrastructure.rs  instance_registry.rs  k8s_provisioner.rs  lib.rs  media_types.rs  node.rs  project.rs  sidecar.rs  weft_compiler.rs  weft_type.rs
crates/weft-core/src/tests/: compiler_tests.rs  executor_tests.rs  weft_type_tests.rs
crates/weft-core/tests/: type_system.rs
crates/weft-nodes/: Cargo.toml
crates/weft-nodes/src/: constants.rs  enrich.rs  form_input.rs  form_registrar.rs  infra_helpers.rs  lib.rs  main.rs  node.rs  passthrough.rs  registry.rs  runner.rs  service.rs  trigger_service.rs
crates/weft-nodes/src/tests/: enrich_tests.rs
crates/weft-orchestrator/: Cargo.toml
crates/weft-orchestrator/src/: executor_axum.rs  main.rs
dashboard/: .env.example  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
dashboard/src/: app.d.ts  app.html  hooks.server.ts
dashboard/src/lib/: auth-gate.svelte  config.ts  index.ts  project-hydration.ts  telemetry-events.ts  telemetry.ts  utils.ts  validation.ts
dashboard/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  layout.css
dashboard/static/extensions/: README.md  weavemind-firefox.xpi
dashboard/static/tutorials/: 01-hello-weavemind.json  02-scheduled-fetch.json  03-human-in-the-loop.json  04-persistent-memory.json  05-parallel-processing.json
extension/: package.json  pnpm-lock.yaml  wxt.config.ts
extension/src/entrypoints/: background.ts
extension/src/lib/: api.ts
scripts/: audit_nodes.py  catalog-link.sh
sidecars/examples/javascript/: package.json
sidecars/examples/rust/: Cargo.toml
sidecars/examples/rust/src/: main.rs
(+234 files in other folders)
