[workspace]
resolver = "2"
members = [
    "crates/weft-core",
    "crates/weft-nodes",
    "crates/weft-api",
    "crates/weft-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-OSAASy"
repository = "https://github.com/WeaveMindAI/weft"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Web framework
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "json", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Project engine
restate-sdk = "0.7"

# LLM - use local path during development, switch to crates.io for release
minillmlib = "0.3.4"

# Kubernetes
kube = { version = "3.0.1", features = ["client", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.27", features = ["latest"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dotenvy = "0.15"
