[package]
name = "weft-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "weft-api"
path = "src/main.rs"

[dependencies]
weft-core = { path = "../weft-core" }
weft-nodes = { path = "../weft-nodes" }
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
hostname = "0.4"
rand = "0.8"
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.22"
subtle = "2"
