[package]
name = "weft-nodes"
version.workspace = true
edition.workspace = true

[[bin]]
name = "node-runner"
path = "src/main.rs"

[dependencies]
weft-core = { path = "../weft-core" }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
reqwest.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
minillmlib.workspace = true
axum.workspace = true
tower-http.workspace = true
chrono.workspace = true

# Node registry auto-discovery
inventory = "0.3"

# Trigger dependencies
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
cron = "0.15"
notify = "7"
feed-rs = "2"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
regex = "1"
urlencoding = "2"

# Email dependencies
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mail-parser = "0.9"
