[package]
name = "weft-orchestrator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
weft-core = { path = "../weft-core" }
weft-nodes = { path = "../weft-nodes" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
restate-sdk.workspace = true
dotenvy.workspace = true
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap = "6"
subtle = "2"
